# Q1View

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OnnxRuntime.props  OpenCV3Debug.props  OpenCV3Release.props  OpenCV4Debug.props  OpenCV4Release.props  OpenCVDebug.props  OpenCVRelease.props  PRIVACY.md  Q1ViewHeif.props  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: cmake-core.yml  heif-dependency.yml  opencv-dependency.yml  release-qt-viewer.yml  release.yml  store-validation-trial.yml  viewer-qt.yml
Comparator/: Comparator.cpp  Comparator.h  Comparator.rc  Comparator.sln  Comparator.vcproj  Comparator.vcxproj  ComparatorDoc.cpp  ComparatorDoc.h  ComparatorPane.h  ComparatorUtil.h  ComparatorView.cpp  ComparatorView.h  ComparatorViews.cpp  ComparatorViews.h  CustomSizeDlg.cpp  FileChangeNotiThread.cpp  FileChangeNotiThread.h  FileScanThread.cpp  FileScanThread.h  FrmCmpInfo.h  FrmCmpStrategy.cpp  FrmCmpStrategy.h  FrmInfoView.cpp  FrmInfoView.h  FrmSrc.h  FrmsInfoView.cpp  FrmsInfoView.h  LpipsEngine.cpp  LpipsEngine.h  LpipsScanThread.cpp  LpipsScanThread.h  MainFrm.cpp  MainFrm.h  MatFrmSrc.cpp  MatFrmSrc.h  MetricCal.cpp  MetricCal.h  MlModelProvisioner.cpp  MlModelProvisioner.h  PosInfoView.cpp  (+13 more)
Comparator/res/: Comparator.rc2
Comparer/: Comparer.cpp  Comparer.h  Comparer.rc  Comparer.sln  Comparer.vcproj  Comparer.vcxproj  ComparerDoc.cpp  ComparerDoc.h  ComparerPane.h  ComparerView.cpp  ComparerView.h  ComparerViewC.cpp  ComparerViewC.h  ComparerViewL.cpp  ComparerViewL.h  ComparerViewR.cpp  ComparerViewR.h  ComparerViews.cpp  ComparerViews.h  CustomFpsDlg.cpp  CustomFpsDlg.h  CustomSizeDlg.cpp  CustomSizeDlg.h  FileChangeNotiThread.cpp  FileScanThread.cpp  FileScanThread.h  FrmCmpStrategy.cpp  FrmCmpStrategy.h  FrmInfoView.cpp  FrmInfoView.h  FrmSrc.cpp  FrmSrc.h  FrmsInfoView.cpp  FrmsInfoView.h  MainFrm.cpp  MainFrm.h  MatFrmSrc.cpp  MatFrmSrc.h  MetricCal.cpp  MetricCal.h  (+20 more)
Comparer/doc/: layout.pptx
Comparer/res/: Comparer.rc2
QCommon/: QCommon.sln  QCommon.vcproj  QCommon.vcxproj
QCommon/inc/: Q1ViewVersion.h  QCommon.h  QDebug.h  QMath.h  QPort.h
QVisionCore/: Makefile  QColorName.cpp  QColorName.h  QCvUtil.cpp  QCvUtil.h  QDerivative.cpp  QDerivative.h  QFeatureExtraction.cpp  QFeatureExtraction.h  QHeifUtil.cpp  QHeifUtil.h  QImageDPM.cpp  QImageDPM.h  QImageDpmParse.cpp  QImageDpmParse.h  QImageEpipol.cpp  QImageEpipol.h  QImageMatcher.cpp  QImageMatcher.h  QImageOcv.cpp  QImageSkin.cpp  QImageSkin.h  QImageStr.cpp  QImageStr.h  QImageViewerCmn.cpp  QImageViewerCmn.h  QOcv.cpp  QOcv.h  QRotate.cpp  QRotate.h  QSlicWrapper.cpp  QSlicWrapper.h  QStructuralEdge.cpp  QStructuralEdge.h  QSuperPixel.cpp  QSuperPixel.h  QTickMeter.h  QViewerCmn.cpp  QViewerCmn.h  QViewerShortcuts.h  (+14 more)
QVisionCore/ColornameUnitTest/: ColornameUnitTest.sln  ColornameUnitTest.vcxproj  Main.cpp
QVisionCore/DpmUnitTest/: DpmUnitTest.sln  DpmUnitTest.vcxproj  Main.cpp  Makefile
QVisionCore/EpipoleUnitTest/: EpipoleUnitTest.sln  EpipoleUnitTest.vcxproj  Main.cpp
QVisionCore/FeatureExtractionTest/: FeatureExtraction.cpp  FeatureExtractionTest.sln  FeatureExtractionTest.vcxproj
QVisionCore/PffSegmentUnitTest/: PffSegmentUnitTest.cpp  PffSegmentUnitTest.sln  PffSegmentUnitTest.vcxproj
QVisionCore/SlicTest/: Main.cpp  SlicTest.sln  SlicTest.vcxproj
QVisionCore/StructuralEdgeTest/: StructuralEdgeTest.cpp  StructuralEdgeTest.sln  StructuralEdgeTest.vcxproj
QVisionCore/pff_segment/: convolve.h  disjoint-set.cpp  disjoint-set.h  filter.cpp  filter.h  image.h  imconv.h  segment-graph.cpp  segment-graph.h  segment-image.cpp
SMultithreadPlus/app/: SBufferPoolTest.cpp  SParcelTest.cpp  SReqListenerTest.cpp  SSafeCQTest.cpp
SMultithreadPlus/app/linux_SParcelTest/: Makefile
SMultithreadPlus/app/x86_linux_SBufferPoolTest/: Makefile
SMultithreadPlus/app/x86_linux_SReqListenerTest/: Makefile
SMultithreadPlus/app/x86_linux_SSafeCQTest/: Makefile
SMultithreadPlus/app/x86_windows/: SBufferPoolTest.sln  SBufferPoolTest.vcproj  (+6 more)
SMultithreadPlus/inc/: SBufferPool.h  SCircularQueue.h  SCondition.h  SMutex.h  SParcel.h  SReqListener.h  SSafeCQ.h  SThread.h  SmpCommon.h
SMultithreadPlus/src/: SBufferPool.cpp  SCondition.cpp  SMutex.cpp  SParcel.cpp  SReqListener.cpp  SThread.cpp
SMultithreadPlus/staging/: MultiSvscTest.cpp  SvscFilter.cpp  SvscFilter.h  SvscTest.cpp
Tests/: CoreRegressionTests.c  CoreRegressionTests.vcxproj  run_core_regression_tests.sh  run_qt_smoke.sh
Tests/fixtures/: gen_raw_fixtures.c
Viewer/: AudioPlayer.cpp  AudioPlayer.h  CscThread.cpp  CscThread.h  CustomFpsDlg.cpp  CustomFpsDlg.h  CustomSizeDlg.cpp  FileChangeNotiThread.cpp  FileChangeNotiThread.h  FileFinderThread.cpp  FileFinderThread.h  FrmProvideThread.cpp  FrmProvideThread.h  FrmSrc.h  MainFrm.cpp  MainFrm.h  MatFrmSrc.h  README.md  RawFrmSrc.h  StoreUpdate.cpp  StoreUpdate.h  TODOs.txt  ThumbnailPane.cpp  ThumbnailPane.h  VidCapFrmSrc.h  VidCapThread.cpp  VidCapThread.h  Viewer.cpp  Viewer.h  Viewer.rc  Viewer.reg  Viewer.sln  Viewer.vcproj  Viewer.vcxproj  ViewerCmn.h  ViewerDebug.h  ViewerDoc.cpp  ViewerDoc.h  ViewerFileOrder.h  ViewerFileTypes.h  (+6 more)
Viewer/res/: Viewer.rc2
ViewerQt/: HeifReader.cpp  HeifReader.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  Q1Theme.h  RawOpenDialog.cpp  RawOpenDialog.h  SyncChannel.cpp  SyncChannel.h  ThumbnailPane.cpp  ThumbnailPane.h  VideoView.cpp  VideoView.h  Y4mReader.cpp  Y4mReader.h  main.cpp  q1view.qrc  q1view.rc
docs/: CROSS_PLATFORM.md  DEVELOPMENT.md  HEIF_SUPPORT.md  IMAGE_SOURCES.md  LPIPS_distribution_design.md  PORTING_ROADMAP.md  PORTING_STATUS.md  README.md  STORE_LISTING.md  STORE_SUBMISSION.md  USER_GUIDE.md  _config.yml
installer/: Q1View.iss
installer/msix/: AppxManifest.xml
packaging/linux/: q1view-viewer-qt.desktop
tests/: core_smoke.cpp
tools/lpips/: README.md  export_lpips_onnx.py  requirements.txt
(+37 files in other folders)
